tests/paczka1/fuzzy1/40733510.err
Error in line 13: lnu1K17pM A583 51,3
Error in line 9: l2C8ZCph A583 29,9
Error in line 17: q9F6 S166 34,1
Error in line 12: S166 A583 76,7
Error in line 25: l2C8ZCph S817 69,8
Error in line 27: l2C8ZCph S166 90,1
